[gd_scene load_steps=38 format=3 uid="uid://o27yt3k5ogk7"]

[ext_resource type="Script" path="res://UserInterface/GUI/InGameMenu/InGameMenuScript.gd" id="1_kghvm"]
[ext_resource type="Texture2D" uid="uid://s2hs631h504h" path="res://UserInterface/GUI/red-cross-icon-button-png.webp" id="2_8mkx1"]
[ext_resource type="Texture2D" uid="uid://dne4poa2g5uvf" path="res://UserInterface/GUI/Fence (1).png" id="3_bmyla"]
[ext_resource type="Texture2D" uid="uid://c3c37gp4u62jp" path="res://UserInterface/GUI/Selected-Fence.png" id="4_hggqf"]
[ext_resource type="Texture2D" uid="uid://c0lmj72jjla3c" path="res://UserInterface/GUI/Log-Cabin.png" id="4_j3yyc"]
[ext_resource type="Texture2D" uid="uid://c06f11ke8dgt6" path="res://UserInterface/GUI/Selected-Log-Cabin.png" id="6_rhcgh"]
[ext_resource type="Texture2D" uid="uid://ycncb2u3pd71" path="res://UserInterface/GUI/trees (1).png" id="6_t888u"]
[ext_resource type="Texture2D" uid="uid://btpvunh6sy2k" path="res://UserInterface/GUI/Porta-Potty.png" id="7_uggg2"]
[ext_resource type="Texture2D" uid="uid://xacnwbj0f34b" path="res://UserInterface/GUI/Selected-Watchtower.png" id="8_d05rn"]
[ext_resource type="Texture2D" uid="uid://lrxelx2ewbtn" path="res://UserInterface/GUI/Selected-Tres.png" id="10_ja5u5"]
[ext_resource type="Texture2D" uid="uid://c0vcaxyrjpt0r" path="res://UserInterface/GUI/Selected-Porta-Potty.png" id="12_xjaxx"]
[ext_resource type="Texture2D" uid="uid://dsx01wbxoky6o" path="res://UserInterface/GUI/checkbox.png" id="13_08dqm"]
[ext_resource type="Texture2D" uid="uid://mehetnher8x7" path="res://UserInterface/GUI/Overlay-Template.png" id="13_oxat6"]
[ext_resource type="Texture2D" uid="uid://b44k10jwdl234" path="res://UserInterface/GUI/EnergyBarBack.png" id="15_v3neo"]
[ext_resource type="Texture2D" uid="uid://5cqu6vnh42mj" path="res://UserInterface/GUI/Pause-Button (1).png" id="16_t1a4d"]
[ext_resource type="Texture2D" uid="uid://cgxh76kuxyn3w" path="res://UserInterface/GUI/EnergyBarFront.png" id="16_yg8c1"]
[ext_resource type="Texture2D" uid="uid://cvtumu03fm4ga" path="res://UserInterface/GUI/Play-Button (1).png" id="17_3inxt"]
[ext_resource type="Texture2D" uid="uid://d08k5rv0rgmuf" path="res://UserInterface/GUI/Pause-Button-Selected.png" id="17_meo5g"]
[ext_resource type="Texture2D" uid="uid://b5g471ol8boj4" path="res://UserInterface/GUI/Fast-Forward-Button.png" id="18_tg00r"]
[ext_resource type="Texture2D" uid="uid://0q0mc4hppv8v" path="res://UserInterface/GUI/Play-Button-Selected.png" id="19_6j45w"]
[ext_resource type="Texture2D" uid="uid://d4gu110v6t3fv" path="res://UserInterface/GUI/Fast-Forward-Button-Selected.png" id="21_paxs6"]

[sub_resource type="Theme" id="Theme_qlupe"]

[sub_resource type="Theme" id="Theme_2ouy6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pfpw7"]
load_path = "res://.godot/imported/Watchtower.png-438463539c3818abc1a04b231cdcbda2.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_636kd"]
load_path = "res://.godot/imported/Selected-Watchtower.png-062277eaedfbd58b2e46c83185a8bde6.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3y8l7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3p8rj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_olpng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_haaoa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_viw8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mph3l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_367cx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kts1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pv4xe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ysiku"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a0dom"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxrg4"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchor_right = 1.669
anchor_bottom = 1.662
offset_top = -21.0
offset_right = -15.688
offset_bottom = -3.97595
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00372, 1.00372)
script = ExtResource("1_kghvm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 0.00741237
offset_top = 875.0
offset_right = 287.007
offset_bottom = 1075.0
theme = SubResource("Theme_qlupe")

[node name="ListHeader" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.9518
offset_top = 5.72364
offset_right = 118.952
offset_bottom = 28.7236
theme_override_colors/font_color = Color(0.443137, 0.917647, 0.364706, 1)
theme_override_font_sizes/font_size = 30
text = "Animal Count"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 47.0
offset_right = 279.0
offset_bottom = 169.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2

[node name="ListItem1" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "White Tailed Deer: "

[node name="ListItem2" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rabbit: "

[node name="ListItem3" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Eastern Wolf:"

[node name="ListItem4" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Coyote: "

[node name="ListItem5" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "American Goldfinch: "

[node name="ListItem6" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cooper's Hawk: "

[node name="ExitMenu" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 248.07
offset_top = 4.72754
offset_right = 648.07
offset_bottom = 404.728
scale = Vector2(0.0873505, 0.0873505)
texture_normal = ExtResource("2_8mkx1")

[node name="BuildMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 854.0
offset_right = 823.0
offset_bottom = 1054.0

[node name="FenceButton" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 19.9259
offset_top = 50.6347
offset_right = 619.926
offset_bottom = 550.635
scale = Vector2(0.214847, 0.214847)
texture_normal = ExtResource("3_bmyla")
texture_pressed = ExtResource("4_hggqf")
texture_hover = ExtResource("4_hggqf")

[node name="FencePrice" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 55.7924
offset_top = 159.231
offset_right = 110.792
offset_bottom = 182.231
theme = SubResource("Theme_2ouy6")
text = "$25"
horizontal_alignment = 1

[node name="CabinButton" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 180.329
offset_top = 50.6348
offset_right = 780.329
offset_bottom = 550.635
scale = Vector2(0.217094, 0.217094)
texture_normal = ExtResource("4_j3yyc")
texture_pressed = ExtResource("6_rhcgh")
texture_hover = ExtResource("6_rhcgh")

[node name="CabinPrice" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 216.196
offset_top = 159.231
offset_right = 271.196
offset_bottom = 182.231
theme = SubResource("Theme_2ouy6")
text = "$125"
horizontal_alignment = 1

[node name="WatchtowerButton" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 342.0
offset_top = 51.0
offset_right = 942.0
offset_bottom = 551.0
scale = Vector2(0.216995, 0.216995)
texture_normal = SubResource("CompressedTexture2D_pfpw7")
texture_pressed = ExtResource("8_d05rn")
texture_hover = SubResource("CompressedTexture2D_636kd")

[node name="WatchtowerPrice" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 375.603
offset_top = 159.231
offset_right = 430.603
offset_bottom = 182.231
theme = SubResource("Theme_2ouy6")
text = "$150"
horizontal_alignment = 1

[node name="TreesButton" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 504.815
offset_top = 50.0073
offset_right = 1104.81
offset_bottom = 550.007
scale = Vector2(0.219592, 0.219592)
texture_normal = ExtResource("6_t888u")
texture_pressed = ExtResource("10_ja5u5")
texture_hover = ExtResource("10_ja5u5")

[node name="TreesPrice" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 538.995
offset_top = 160.227
offset_right = 593.995
offset_bottom = 183.227
theme = SubResource("Theme_2ouy6")
text = "$10"
horizontal_alignment = 1

[node name="BathroomButton" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 665.525
offset_top = 50.6348
offset_right = 1265.52
offset_bottom = 550.635
scale = Vector2(0.220264, 0.220264)
texture_normal = ExtResource("7_uggg2")
texture_pressed = ExtResource("12_xjaxx")
texture_hover = ExtResource("12_xjaxx")

[node name="BathroomPrice" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 705.376
offset_top = 160.227
offset_right = 760.376
offset_bottom = 183.227
theme = SubResource("Theme_2ouy6")
text = "$50"
horizontal_alignment = 1

[node name="BuildingMenuLabel" type="Label" parent="BuildMenu"]
layout_mode = 0
offset_left = 17.9333
offset_top = 10.7829
offset_right = 116.933
offset_bottom = 45.7829
theme_override_font_sizes/font_size = 25
text = "Building"

[node name="ExitMenu2" type="TextureButton" parent="BuildMenu"]
layout_mode = 0
offset_left = 786.076
offset_top = 3.80859
offset_right = 1186.08
offset_bottom = 403.809
scale = Vector2(0.0819891, 0.0819891)
texture_normal = ExtResource("2_8mkx1")

[node name="BuildConfirmation" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 1685.0
offset_top = 894.0
offset_right = 1881.0
offset_bottom = 1030.0

[node name="Label" type="Label" parent="BuildConfirmation"]
layout_mode = 0
offset_left = -19.0
offset_top = 7.0
offset_right = 209.0
offset_bottom = 62.0
text = "Click the checkbox to 
confirm your build!"
horizontal_alignment = 1

[node name="BuildCost" type="Label" parent="BuildConfirmation"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 59.5103
offset_top = 106.279
offset_right = 139.51
offset_bottom = 129.279
text = "Cost: $125"

[node name="ConfirmBuild" type="TextureButton" parent="BuildConfirmation"]
layout_mode = 1
anchors_preset = -1
offset_left = 44.5659
offset_top = 61.4457
offset_right = 404.566
offset_bottom = 421.446
scale = Vector2(0.130964, 0.130964)
texture_normal = ExtResource("13_08dqm")

[node name="CancelBuild" type="TextureButton" parent="BuildConfirmation"]
layout_mode = 0
offset_left = 105.34
offset_top = 61.4468
offset_right = 505.34
offset_bottom = 461.447
scale = Vector2(0.111866, 0.111866)
texture_normal = ExtResource("2_8mkx1")

[node name="NewOverlay2" type="Sprite2D" parent="."]
position = Vector2(957.438, 559.917)
scale = Vector2(0.997896, 0.990529)
texture = ExtResource("13_oxat6")

[node name="DayCount" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 893.676
offset_top = 1059.06
offset_right = 956.676
offset_bottom = 1099.06
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3y8l7")
text = "Day 0"

[node name="Clock" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 953.453
offset_top = 1059.14
offset_right = 1044.45
offset_bottom = 1102.14
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3p8rj")
text = "8:00am"

[node name="EnergyBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 1758.97
offset_top = 1058.99
offset_right = 2058.97
offset_bottom = 1133.99
scale = Vector2(0.430916, 0.34438)
texture_under = ExtResource("15_v3neo")
texture_over = ExtResource("16_yg8c1")
texture_progress = ExtResource("16_yg8c1")

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 908.62
offset_top = 1032.16
offset_right = 1108.62
offset_bottom = 1232.16
scale = Vector2(0.10603, 0.108602)
texture_normal = ExtResource("16_t1a4d")
texture_pressed = ExtResource("17_meo5g")
texture_focused = ExtResource("17_meo5g")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 948.472
offset_top = 1032.16
offset_right = 1148.47
offset_bottom = 1232.16
scale = Vector2(0.102359, 0.102359)
texture_normal = ExtResource("17_3inxt")
texture_pressed = ExtResource("19_6j45w")
texture_focused = ExtResource("19_6j45w")

[node name="FastForwardButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 984.338
offset_top = 1031.16
offset_right = 1184.34
offset_bottom = 1231.16
scale = Vector2(0.111723, 0.104573)
texture_normal = ExtResource("18_tg00r")
texture_pressed = ExtResource("21_paxs6")
texture_focused = ExtResource("21_paxs6")

[node name="BuildingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 47.8221
offset_top = 1056.07
offset_right = 164.822
offset_bottom = 1092.07
scale = Vector2(1.01224, 1.01224)
theme_override_colors/font_hover_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_olpng")
theme_override_styles/normal = SubResource("StyleBoxEmpty_haaoa")
text = "Building"

[node name="AnimalStatusButton" type="Button" parent="."]
layout_mode = 0
offset_left = 228.151
offset_top = 1056.07
offset_right = 410.151
offset_bottom = 1091.07
theme_override_colors/font_hover_color = Color(0.443137, 0.917647, 0.364706, 1)
theme_override_colors/font_focus_color = Color(0, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_viw8b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mph3l")
text = "Animal Status"

[node name="PlantStatusButton" type="Button" parent="."]
layout_mode = 0
offset_left = 459.292
offset_top = 1056.07
offset_right = 621.292
offset_bottom = 1091.07
theme_override_colors/font_hover_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_367cx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kts1")
text = "Plant Status"

[node name="ReleasingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 624.676
offset_top = 1055.08
offset_right = 761.676
offset_bottom = 1090.08
theme_override_colors/font_hover_color = Color(0, 0.788235, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_pv4xe")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ysiku")
text = "Releasing"

[node name="EnergyLabel" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 1517.36
offset_top = 1054.08
offset_right = 1593.36
offset_bottom = 1093.08
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_a0dom")
text = "Energy:"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 1610.0
offset_top = 1061.0
offset_right = 1648.0
offset_bottom = 1087.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_dxrg4")

[node name="Funds" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = -0.985591
offset_top = -6.92124
offset_right = 39.0144
offset_bottom = 28.0788
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "$0"

[connection signal="pressed" from="Panel/ExitMenu" to="." method="_on_exit_menu_pressed"]
[connection signal="pressed" from="BuildMenu/FenceButton" to="." method="_on_place_fence_button_pressed"]
[connection signal="pressed" from="BuildMenu/CabinButton" to="." method="_on_place_cabin_button_pressed"]
[connection signal="pressed" from="BuildMenu/WatchtowerButton" to="." method="_on_place_watchtower_button_pressed"]
[connection signal="pressed" from="BuildMenu/TreesButton" to="." method="_on_place_trees_button_pressed"]
[connection signal="pressed" from="BuildMenu/BathroomButton" to="." method="_on_place_bathroom_button_pressed"]
[connection signal="pressed" from="BuildMenu/ExitMenu2" to="." method="_on_exit_menu_2_pressed"]
[connection signal="pressed" from="BuildConfirmation/ConfirmBuild" to="." method="_on_confirm_build_pressed"]
[connection signal="pressed" from="BuildConfirmation/CancelBuild" to="." method="_on_cancel_build_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="FastForwardButton" to="." method="_on_fast_forward_button_pressed"]
[connection signal="pressed" from="BuildingButton" to="." method="_on_building_button_pressed"]
[connection signal="pressed" from="AnimalStatusButton" to="." method="_on_animal_status_button_pressed"]
[connection signal="pressed" from="PlantStatusButton" to="." method="_on_plant_status_button_pressed"]
